# polygon-wall-reconstruction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: a_wall_layer.json  big_room_with_pillar.json  generate_skyscraper.py  huge_hotel_floor.json  huge_office_floor.json  messy_cad_scan.json  nested_polygon.json  realistic_apartment.json  shared_wall.json  simple_square.json  touching_walls.json
scripts/: repro_compactness.py
src/polygons/: cli.py  detect.py  io_json.py  io_out.py  visualize.py  webapp.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: index.html
tests/: test_detect.py  test_detect_simple.py  test_geometric_precision.py  test_io_json.py  test_open_shape.py  test_pipeline.py
